# qrref

./: .gitignore  README.md  pyproject.toml
qrpy/: __init__.py  __main__.py  data_analysis.py  data_encoding.py  error_correction.py  galois_field.py  masking.py  placement.py  qr.py  settings.py  table_data.py
qrref/: __init__.py  __main__.py  custom_types.py  data_analysis.py  data_encoding.py  error_correction.py  galois_field.py  masking.py  placement.py  qr.py  settings.py  table_data.py
tests/: test_data_analysis.py  test_data_encoding.py  test_error_correction.py  test_galois_field.py  test_masking.py  test_placement.py  test_table_data.py
