[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrref"
version = "0.1.1"
description = "QR code generator with a command-line interface for showing, saving and copying generated QR codes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "matplotlib",
  "pillow",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TrulsHenriksson/qrref/"

[project.optional-dependencies]
copy = [
  "pyperclipimg"
]
